feat: registration new user (#32)
