# go-server/adapters/rest-api-handlers/UsersHandler.go
@@ -1,30 +1,37 @@
 package handlers
 
 import (
-	"github.com/go-openapi/runtime/middleware"
+	"it-stone-server/adapters/converters"
+	"it-stone-server/helpers"
 	"it-stone-server/models"
 	"it-stone-server/repository"
 	"it-stone-server/restapi/operations/user"
 	"net/http"
+
+	"github.com/go-openapi/runtime/middleware"
 )
 
 type UsersHandler interface {
 	GetUser(params user.GetUserParams) middleware.Responder
 	UpdateUser(params user.UpdateUserParams) middleware.Responder
 	DeleteUser(params user.DeleteUserParams) middleware.Responder
+	GetUserByToken(principal *models.Principal) middleware.Responder
 }
 
 type usersHandler struct {
+	uc converters.UserConverter
 }
 
 func NewUsersHandler() UsersHandler {
-	return &usersHandler{}
+	return &usersHandler{
+		uc: converters.NewUserConverter(),
+	}
 }
 
 func (h *usersHandler) GetUser(params user.GetUserParams) middleware.Responder {
 
 	userRepository := repository.NewUserRepository()
-	u, err := userRepository.GetUser(params.ID)
+	domainUser, err := userRepository.GetUserByField("id", params.ID)
 
 	if err != nil {
 		errMsg := http.StatusText(http.StatusInternalServerError)
@@ -34,12 +41,29 @@ func (h *usersHandler) GetUser(params user.GetUserParams) middleware.Responder {
 		})
 	}
 
-	return user.NewGetUserOK().WithPayload(u)
+	return user.NewGetUserOK().WithPayload(h.uc.FromDomain(domainUser))
+}
+
+func (h *usersHandler) GetUserByToken(principal *models.Principal) middleware.Responder {
+	jwt := helpers.NewJWTHelper()
+	userID, err := jwt.GetUserID(string(*principal))
+
+	userRepository := repository.NewUserRepository()
+	domainUser, err := userRepository.GetUserByField("id", *userID)
+
+	if err != nil {
+		errMsg := http.StatusText(http.StatusInternalServerError)
+		return user.NewGetUserByTokenDefault(http.StatusInternalServerError).WithPayload(&models.Error{
+			Code:    http.StatusInternalServerError,
+			Message: &errMsg,
+		})
+	}
+	return user.NewGetUserByTokenOK().WithPayload(h.uc.FromDomain(domainUser))
 }
 func (h *usersHandler) UpdateUser(params user.UpdateUserParams) middleware.Responder {
 
 	userRepository := repository.NewUserRepository()
-	u, err := userRepository.UpdateUser(params.ID, params.User)
+	domainUser, err := userRepository.UpdateUser(params.ID, h.uc.ToDomain(params.User))
 
 	if err != nil {
 		errMsg := http.StatusText(http.StatusInternalServerError)
@@ -49,7 +73,7 @@ func (h *usersHandler) UpdateUser(params user.UpdateUserParams) middleware.Respo
 		})
 	}
 
-	return user.NewUpdateUserOK().WithPayload(u)
+	return user.NewUpdateUserOK().WithPayload(h.uc.FromDomain(domainUser))
 }
 func (h *usersHandler) DeleteUser(params user.DeleteUserParams) middleware.Responder {
 	userRepository := repository.NewUserRepository()
