# go-server/swagger.yml
@@ -34,7 +34,7 @@ paths:
         200:
           description: Login successful.
           schema:
-            $ref: "#/definitions/UserToken"
+            $ref: "#/definitions/Token"
         default:
           description: Internal server error
           schema:
@@ -186,6 +186,27 @@ paths:
               $ref: "#/definitions/User"
         401:
           $ref: "#/responses/UnauthorizedError"
+        default:
+          description: Internal server error
+          schema:
+            $ref: "#/definitions/Error"
+  /v0/user:
+    get:
+      operationId: getUserByToken
+      tags:
+        - user
+      summary: Receiving the user by token
+      responses:
+        200:
+          description: Success
+          schema:
+            $ref: "#/definitions/User"
+        401:
+          $ref: "#/responses/UnauthorizedError"
+        404:
+          description: The user with the specified ID was not found.
+          schema:
+            $ref: "#/definitions/Error"
         default:
           description: Internal server error
           schema:
@@ -356,11 +377,9 @@ definitions:
       total_games:
         type: integer
         description: Count of all games of the User.
-  UserToken:
+  Token:
     type: object
     properties:
-      user:
-        $ref: "#/definitions/User"
       token:
         type: string
   Error:
